--- a/dataset_ETL.ipynb
+++ b/dataset_ETL.ipynb
@@ -1065,9 +1065,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "singer_computer",
    "language": "python",
-   "name": "python3"
+   "name": "singer_computer"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1079,7 +1079,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
