--- a/dataset_ETL.ipynb
+++ b/dataset_ETL.ipynb
@@ -597,14 +597,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bilanciamento dataset"
+    "## Bilanciamento dataset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prima delle operazioni di Oversampling su 0,1,2,3 e Undersampling su 4"
+    "### Prima delle operazioni di Oversampling su 0,1,2,3 e Undersampling su 4"
    ]
   },
   {
@@ -781,7 +781,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dopo delle operazioni di Oversampling su 0,1,2,3 e Undersampling su 4"
+    "### Dopo delle operazioni di Oversampling su 0,1,2,3 e Undersampling su 4"
    ]
   },
   {
@@ -832,8 +832,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Come tecnica di OverSampling ho utilizzato la SMOTE, mentre per fare undersampling ho utilizzato una tecnica basata su clusterizzazione.\n",
-    "### Alla fine ho riportato tutti i campioni a 500.\n",
+    "#### Come tecnica di OverSampling ho utilizzato la SMOTE, mentre per fare undersampling ho utilizzato una tecnica basata su clusterizzazione.\n",
+    "##### Alla fine ho riportato tutti i campioni a 500.\n",
     "\n",
     "##### Risultati Oversampling:\n",
     "    - Classe 0: 393 sintetici e 107 naturali\n",
@@ -988,7 +988,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Altre operazioni"
+    "### Altre operazioni"
    ]
   },
   {
