--- a/dataset_ETL.ipynb
+++ b/dataset_ETL.ipynb
@@ -809,9 +809,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "singer_computer",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "singer_computer"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -823,7 +823,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
