--- a/Classificazione_noGPA_noAbs.ipynb
+++ b/Classificazione_noGPA_noAbs.ipynb
@@ -65,21 +65,17 @@
     "y_test = df_test['GradeClass']\n",
     "\n",
     "\n",
-    "categorical_columns = ['Ethnicity', 'Gender']  # Aggiungi altre se necessario\n",
+    "categorical_columns = ['Ethnicity', 'Gender'] \n",
     "\n",
-    "# Concatenazione temporanea dei dataset per garantire coerenza nelle colonne generate\n",
     "x_combined = pd.concat([x_train, x_test], axis=0)\n",
     "\n",
-    "# Applicazione del One-Hot Encoding\n",
     "x_combined_encoded = pd.get_dummies(x_combined, columns=categorical_columns, prefix=categorical_columns)\n",
     "\n",
-    "# Separazione dei dataset di training e testing trasformati\n",
     "x_train = x_combined_encoded.iloc[:x_train.shape[0], :].reset_index(drop=True)\n",
     "x_test = x_combined_encoded.iloc[x_train.shape[0]:, :].reset_index(drop=True)\n",
     "\n",
     "numeric_columns = ['StudyTimeWeekly']\n",
     "\n",
-    "# Inizializza lo scaler per la standardizzazione (media = 0, deviazione standard = 1)\n",
     "scaler = StandardScaler()\n",
     "\n",
     "# Esegui il fitting solo sulle colonne numeriche del training set\n",
@@ -89,14 +85,12 @@
     "x_train_scaled_numeric = scaler.transform(x_train[numeric_columns])\n",
     "x_test_scaled_numeric = scaler.transform(x_test[numeric_columns])\n",
     "\n",
-    "# Aggiorna i DataFrame originali con i dati scalati\n",
     "x_train_scaled = x_train.copy()\n",
     "x_test_scaled = x_test.copy()\n",
     "\n",
     "x_train_scaled[numeric_columns] = x_train_scaled_numeric\n",
     "x_test_scaled[numeric_columns] = x_test_scaled_numeric\n",
     "\n",
-    "# Mostra il DataFrame scalato\n",
     "print(len(x_train_scaled))"
    ]
   },
@@ -140,9 +134,7 @@
     "print(len(x_combined))\n",
     "ax = sns.countplot(data=x_combined, x='GradeClass', palette=\"Oranges\")\n",
     "\n",
-    "#df_train_resampled.to_csv(\"Dataset/dataset_resampled.csv\", index=False)\n",
     "\n",
-    "# Annotazioni sui valori\n",
     "for p in ax.patches:\n",
     "    ax.annotate(f'{int(p.get_height())}', (p.get_x() + p.get_width() / 2, p.get_height()), \n",
     "                ha='center', va='bottom')\n",
@@ -193,9 +185,7 @@
     "print(len(x_combined))\n",
     "ax = sns.countplot(data=x_combined, x='GradeClass', palette=\"Oranges\")\n",
     "\n",
-    "#df_train_resampled.to_csv(\"Dataset/dataset_resampled.csv\", index=False)\n",
     "\n",
-    "# Annotazioni sui valori\n",
     "for p in ax.patches:\n",
     "    ax.annotate(f'{int(p.get_height())}', (p.get_x() + p.get_width() / 2, p.get_height()), \n",
     "                ha='center', va='bottom')\n",
@@ -465,10 +455,8 @@
     "# Configurare GridSearchCV\n",
     "grid_search = GridSearchCV(estimator=ada_boost, param_grid=param_grid, cv=5, scoring='accuracy', n_jobs=-1)\n",
     "\n",
-    "# Eseguire la Grid Search\n",
     "grid_search.fit(x_train_scaled, y_train)\n",
     "\n",
-    "# Visualizzare i migliori parametri e il miglior score\n",
     "print(\"Best parameters found: \", grid_search.best_params_)\n",
     "print(\"Best cross-validation accuracy: \", grid_search.best_score_)"
    ]
@@ -496,16 +484,12 @@
     "    'p': [1, 2],  # Parametro di distanza per Minkowski (1=Manhattan, 2=Euclidean)\n",
     "}\n",
     "\n",
-    "# Creare un'istanza del modello KNN\n",
     "knn = KNeighborsClassifier()\n",
     "\n",
-    "# Configurare GridSearchCV\n",
     "grid_search = GridSearchCV(estimator=knn, param_grid=param_grid, cv=5, scoring='accuracy', n_jobs=-1)\n",
     "\n",
-    "# Eseguire la Grid Search\n",
     "grid_search.fit(x_train_scaled, y_train)\n",
     "\n",
-    "# Visualizzare i migliori parametri e il miglior score\n",
     "print(\"Best parameters found: \", grid_search.best_params_)\n",
     "print(\"Best cross-validation accuracy: \", grid_search.best_score_)\n"
    ]
@@ -530,16 +514,12 @@
     "    'var_smoothing': [1e-9, 1e-8, 1e-7, 1e-6, 1e-5],  # Variabile di smoothing per evitare problemi numerici\n",
     "}\n",
     "\n",
-    "# Creare un'istanza del modello GaussianNB\n",
     "gnb = GaussianNB()\n",
     "\n",
-    "# Configurare GridSearchCV\n",
     "grid_search = GridSearchCV(estimator=gnb, param_grid=param_grid, cv=5, scoring='accuracy', n_jobs=-1)\n",
     "\n",
-    "# Eseguire la Grid Search\n",
     "grid_search.fit(x_train_scaled, y_train)\n",
     "\n",
-    "# Visualizzare i migliori parametri e il miglior score\n",
     "print(\"Best parameters found: \", grid_search.best_params_)\n",
     "print(\"Best cross-validation accuracy: \", grid_search.best_score_)"
    ]
@@ -693,8 +673,8 @@
    "source": [
     "for model_name, model in models_pers_params.items():\n",
     "    print(model_name, model)\n",
-    "    model.fit(x_train_scaled, y_train)  # Addestrare il modello\n",
-    "    y_pred = model.predict(x_test_scaled)  # Predizione sui dati di test\n",
+    "    model.fit(x_train_scaled, y_train) \n",
+    "    y_pred = model.predict(x_test_scaled)  \n",
     "    print(f\"\\n{model_name} - Test Set Evaluation\")\n",
     "    print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "    print(classification_report(y_test, y_pred))"
@@ -704,7 +684,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ensamble learning"
+    "## Ensamble learning"
    ]
   },
   {
@@ -889,7 +869,6 @@
     "from sklearn.ensemble import AdaBoostClassifier\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
     "\n",
-    "# Definire il Voting Classifier con soft voting\n",
     "voting_clf = VotingClassifier(\n",
     "    estimators=[\n",
     "        ('rf', RandomForestClassifier(max_depth= 30, n_estimators=200)),\n",
@@ -900,23 +879,18 @@
     "        ('gbc', GradientBoostingClassifier(random_state=42))\n",
     "\n",
     "    ],\n",
-    "    voting='soft',  # Usando soft voting\n",
-    "    n_jobs=-1  # Usa tutti i core disponibili\n",
+    "    voting='soft',  \n",
+    "    n_jobs=-1  \n",
     ")\n",
     "\n",
-    "# Addestrare il Voting Classifier\n",
     "voting_clf.fit(x_train_scaled, y_train)\n",
     "\n",
-    "# Predire e calcolare l'accuratezza\n",
     "y_pred = voting_clf.predict(x_test)\n",
     "\n",
-    "# Calcolare e visualizzare il classification report\n",
     "print(classification_report(y_test, y_pred))\n",
     "\n",
-    "# **Confusion Matrix**\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "\n",
-    "# Visualizzare la matrice di confusione come una heatmap\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=voting_clf.classes_, yticklabels=voting_clf.classes_)\n",
     "plt.xlabel('Predicted')\n",
@@ -924,12 +898,11 @@
     "plt.title('Confusion Matrix')\n",
     "plt.show()\n",
     "\n",
-    "# **Curva Precision-Recall per Multiclass**\n",
     "y_test_bin = label_binarize(y_test, classes=voting_clf.classes_)\n",
     "\n",
     "plt.figure(figsize=(8, 6))\n",
     "for i in range(y_test_bin.shape[1]):\n",
-    "    y_scores = voting_clf.predict_proba(x_test)[:, i]  # Probabilità per ogni classe\n",
+    "    y_scores = voting_clf.predict_proba(x_test)[:, i] \n",
     "    precision, recall, _ = precision_recall_curve(y_test_bin[:, i], y_scores)\n",
     "    plt.plot(recall, precision, label=f'Class {voting_clf.classes_[i]}')\n",
     "\n",
@@ -940,7 +913,6 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "# **Curva ROC per Multiclass**\n",
     "plt.figure(figsize=(8, 6))\n",
     "for i in range(y_test_bin.shape[1]):\n",
     "    fpr, tpr, _ = roc_curve(y_test_bin[:, i], voting_clf.predict_proba(x_test)[:, i])\n",
@@ -958,13 +930,11 @@
     "# **Learning Curve**\n",
     "train_sizes, train_scores, test_scores = learning_curve(voting_clf, x_train_scaled, y_train, cv=5)\n",
     "\n",
-    "# Calcolare la media e la deviazione standard dei punteggi\n",
     "train_mean = train_scores.mean(axis=1)\n",
     "test_mean = test_scores.mean(axis=1)\n",
     "train_std = train_scores.std(axis=1)\n",
     "test_std = test_scores.std(axis=1)\n",
     "\n",
-    "# Tracciare la learning curve\n",
     "plt.figure(figsize=(8, 6))\n",
     "plt.plot(train_sizes, train_mean, label='Training Accuracy', color='blue')\n",
     "plt.plot(train_sizes, test_mean, label='Test Accuracy', color='green')\n",
@@ -977,20 +947,16 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "# **Feature Importance (Random Forest)**\n",
     "importances = voting_clf.named_estimators_['rf'].feature_importances_\n",
     "\n",
-    "# Creare un dataframe per le feature importances\n",
     "features = x_train_scaled.columns\n",
     "importance_df = pd.DataFrame({\n",
     "    'Feature': features,\n",
     "    'Importance': importances\n",
     "})\n",
     "\n",
-    "# Ordinare per importanza\n",
     "importance_df = importance_df.sort_values(by='Importance', ascending=False)\n",
     "\n",
-    "# Tracciare un bar plot per le feature più importanti\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.barh(importance_df['Feature'], importance_df['Importance'], color='skyblue')\n",
     "plt.xlabel('Importance')\n",
@@ -1001,7 +967,6 @@
     "# **Matrice di Confusione Normalizzata**\n",
     "cm_normalized = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
     "\n",
-    "# Visualizzare la matrice di confusione normalizzata\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(cm_normalized, annot=True, fmt='.2f', cmap='Blues', xticklabels=voting_clf.classes_, yticklabels=voting_clf.classes_)\n",
     "plt.xlabel('Predicted')\n",
@@ -1084,7 +1049,6 @@
     "\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "\n",
-    "# Visualizzare la matrice di confusione come una heatmap\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=stacking_clf.classes_, yticklabels=stacking_clf.classes_)\n",
     "plt.xlabel('Predicted')\n",
