--- a/Classificazione_with_GPA.ipynb
+++ b/Classificazione_with_GPA.ipynb
@@ -379,8 +379,8 @@
    "source": [
     "# Confusion Matrix Heatmap\n",
     "for model_name, model in models_def_params.items():\n",
-    "    model.fit(x_train, y_train)  # Addestrare il modello\n",
-    "    y_pred = model.predict(x_test)  # Predizione sui dati di test\n",
+    "    model.fit(x_train, y_train)\n",
+    "    y_pred = model.predict(x_test)\n",
     "    cm = confusion_matrix(y_test, y_pred)\n",
     "    \n",
     "    plt.figure(figsize=(8, 6))\n",
@@ -439,26 +439,17 @@
     }
    ],
    "source": [
-    "# Moltiplicare per un fattore per visualizzare meglio le barre di errore (ad esempio, 100)\n",
     "scaled_std_accuracies = results_df['Std Accuracy']\n",
     "\n",
-    "# Grafico con Seaborn\n",
     "plt.figure(figsize=(10, 6))\n",
-    "\n",
-    "# Barplot di Seaborn\n",
     "sns.barplot(x='Model', y='Mean Accuracy', data=results_df, palette='Blues')\n",
     "\n",
-    "# Aggiungere le barre di errore\n",
     "plt.errorbar(x=range(len(results_df['Model'])), y=results_df['Mean Accuracy'],\n",
     "             yerr=scaled_std_accuracies, fmt='none', color='black', capsize=5)\n",
-    "\n",
-    "# Aggiungi titolo e etichette\n",
     "plt.title('Model Comparison - KFold Cross-Validation Accuracy')\n",
     "plt.xlabel('Model')\n",
     "plt.ylabel('Mean Accuracy')\n",
-    "plt.xticks(rotation=45, ha='right')  # Ruotare le etichette dei modelli per una migliore visibilità\n",
-    "\n",
-    "# Layout ottimizzato\n",
+    "plt.xticks(rotation=45, ha='right') \n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -573,9 +564,9 @@
    "source": [
     "# Definire la griglia di parametri per AdaBoost\n",
     "param_grid = {\n",
-    "    'n_estimators': [50, 100, 200],  # Numero di stadi (alberi)\n",
-    "    'learning_rate': [0.01, 0.1, 1.0],  # Tasso di apprendimento\n",
-    "    'base_estimator': [DecisionTreeClassifier(max_depth=1), DecisionTreeClassifier(max_depth=3)]  # Alberi base\n",
+    "    'n_estimators': [50, 100, 200],  \n",
+    "    'learning_rate': [0.01, 0.1, 1.0],  \n",
+    "    'base_estimator': [DecisionTreeClassifier(max_depth=1), DecisionTreeClassifier(max_depth=3)] \n",
     "}\n",
     "\n",
     "# Creare un'istanza di AdaBoost\n",
@@ -894,8 +885,8 @@
    "source": [
     "# Confusion Matrix Heatmap\n",
     "for model_name, model in models_pers_params.items():\n",
-    "    model.fit(x_train, y_train)  # Addestrare il modello\n",
-    "    y_pred = model.predict(x_test)  # Predizione sui dati di test\n",
+    "    model.fit(x_train, y_train)\n",
+    "    y_pred = model.predict(x_test)\n",
     "    cm = confusion_matrix(y_test, y_pred)\n",
     "    \n",
     "    plt.figure(figsize=(8, 6))\n",
@@ -954,26 +945,18 @@
     }
    ],
    "source": [
-    "# Moltiplicare per un fattore per visualizzare meglio le barre di errore (ad esempio, 100)\n",
     "scaled_std_accuracies = results_df['Std Accuracy']\n",
     "\n",
-    "# Grafico con Seaborn\n",
     "plt.figure(figsize=(10, 6))\n",
-    "\n",
-    "# Barplot di Seaborn\n",
     "sns.barplot(x='Model', y='Mean Accuracy', data=results_df, palette='Reds')\n",
     "\n",
-    "# Aggiungere le barre di errore\n",
+    "\n",
     "plt.errorbar(x=range(len(results_df['Model'])), y=results_df['Mean Accuracy'],\n",
     "             yerr=scaled_std_accuracies, fmt='none', color='black', capsize=5)\n",
-    "\n",
-    "# Aggiungi titolo e etichette\n",
     "plt.title('Model Comparison - KFold Cross-Validation Accuracy')\n",
     "plt.xlabel('Model')\n",
     "plt.ylabel('Mean Accuracy')\n",
-    "plt.xticks(rotation=45, ha='right')  # Ruotare le etichette dei modelli per una migliore visibilità\n",
-    "\n",
-    "# Layout ottimizzato\n",
+    "plt.xticks(rotation=45, ha='right')\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -1215,11 +1198,9 @@
     "    # Calcola la matrice di confusione\n",
     "    cm = confusion_matrix(y_test, y_pred)\n",
     "    \n",
-    "    # Stampa i risultati\n",
     "    print(f\"Accuratezza: {accuracy:.4f}\")\n",
     "    print(\"Report di classificazione:\\n\", report)\n",
     "    \n",
-    "    # Visualizza la matrice di confusione\n",
     "    plt.figure(figsize=(8, 6))\n",
     "    sns.heatmap(cm, annot=True, fmt=\"d\", cmap=\"Blues\", xticklabels=model.classes_, yticklabels=model.classes_)\n",
     "    plt.title(f\"Matrice di Confusione - {model_name}\")\n",
@@ -1378,10 +1359,8 @@
     "# Calcolare e visualizzare il classification report\n",
     "print(classification_report(y_test, y_pred))\n",
     "\n",
-    "# **Confusion Matrix**\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "\n",
-    "# Visualizzare la matrice di confusione come una heatmap\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=voting_clf.classes_, yticklabels=voting_clf.classes_)\n",
     "plt.xlabel('Predicted')\n",
@@ -1389,7 +1368,6 @@
     "plt.title('Confusion Matrix')\n",
     "plt.show()\n",
     "\n",
-    "# **Curva Precision-Recall per Multiclass**\n",
     "y_test_bin = label_binarize(y_test, classes=voting_clf.classes_)\n",
     "\n",
     "plt.figure(figsize=(8, 6))\n",
@@ -1405,7 +1383,7 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "# **Curva ROC per Multiclass**\n",
+    "# Curva ROC per Multiclass\n",
     "plt.figure(figsize=(8, 6))\n",
     "for i in range(y_test_bin.shape[1]):\n",
     "    fpr, tpr, _ = roc_curve(y_test_bin[:, i], voting_clf.predict_proba(x_test)[:, i])\n",
@@ -1420,7 +1398,7 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "# **Learning Curve**\n",
+    "# Learning Curve\n",
     "train_sizes, train_scores, test_scores = learning_curve(voting_clf, x_train, y_train, cv=5)\n",
     "\n",
     "# Calcolare la media e la deviazione standard dei punteggi\n",
