--- a/Classificazione_with_GPA.ipynb
+++ b/Classificazione_with_GPA.ipynb
@@ -1347,7 +1347,7 @@
     "        ('gbc', GradientBoostingClassifier(random_state=42))\n",
     "    ],\n",
     "    voting='soft',  # Usando soft voting\n",
-    "    n_jobs=-1  # Usa tutti i core disponibili\n",
+    "    n_jobs=-1\n",
     ")\n",
     "\n",
     "# Addestrare il Voting Classifier\n",
@@ -1420,20 +1420,17 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "# **Feature Importance (Random Forest)**\n",
+    "# Feature Importance (Random Forest)\n",
     "importances = voting_clf.named_estimators_['rf'].feature_importances_\n",
     "\n",
-    "# Creare un dataframe per le feature importances\n",
     "features = x_train.columns\n",
     "importance_df = pd.DataFrame({\n",
     "    'Feature': features,\n",
     "    'Importance': importances\n",
     "})\n",
     "\n",
-    "# Ordinare per importanza\n",
     "importance_df = importance_df.sort_values(by='Importance', ascending=False)\n",
     "\n",
-    "# Tracciare un bar plot per le feature più importanti\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.barh(importance_df['Feature'], importance_df['Importance'], color='skyblue')\n",
     "plt.xlabel('Importance')\n",
@@ -1441,7 +1438,7 @@
     "plt.gca().invert_yaxis()  # Invertire l'asse y per mostrare le feature più importanti in alto\n",
     "plt.show()\n",
     "\n",
-    "# **Matrice di Confusione Normalizzata**\n",
+    "# Matrice di Confusione Normalizzata\n",
     "cm_normalized = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
     "\n",
     "# Visualizzare la matrice di confusione normalizzata\n",
