--- a/Classificazione_noGPA.ipynb
+++ b/Classificazione_noGPA.ipynb
@@ -65,7 +65,7 @@
     "y_test = df_test['GradeClass']\n",
     "\n",
     "\n",
-    "categorical_columns = ['Ethnicity', 'Gender']  # Aggiungi altre se necessario\n",
+    "categorical_columns = ['Ethnicity', 'Gender']\n",
     "\n",
     "# Concatenazione temporanea dei dataset per garantire coerenza nelle colonne generate\n",
     "x_combined = pd.concat([x_train, x_test], axis=0)\n",
@@ -79,24 +79,22 @@
     "\n",
     "numeric_columns = ['StudyTimeWeekly', 'Absences']\n",
     "\n",
-    "# Inizializza lo scaler per la standardizzazione (media = 0, deviazione standard = 1)\n",
+    "# Inizializzazione dello scaler per la standardizzazione\n",
     "scaler = StandardScaler()\n",
     "\n",
-    "# Esegui il fitting solo sulle colonne numeriche del training set\n",
     "scaler.fit(x_train[numeric_columns])\n",
     "\n",
-    "# Trasforma i dati di training e testing solo sulle colonne numeriche\n",
+    "# Trasformazione dei dati di training e testing solo sulle colonne numeriche\n",
     "x_train_scaled_numeric = scaler.transform(x_train[numeric_columns])\n",
     "x_test_scaled_numeric = scaler.transform(x_test[numeric_columns])\n",
     "\n",
-    "# Aggiorna i DataFrame originali con i dati scalati\n",
+    "# Aggiornamento dei DataFrame originali con i dati scalati\n",
     "x_train_scaled = x_train.copy()\n",
     "x_test_scaled = x_test.copy()\n",
     "\n",
     "x_train_scaled[numeric_columns] = x_train_scaled_numeric\n",
     "x_test_scaled[numeric_columns] = x_test_scaled_numeric\n",
     "\n",
-    "# Mostra il DataFrame scalato\n",
     "print(len(x_train_scaled))"
    ]
   },
@@ -142,7 +140,6 @@
     "\n",
     "#df_train_resampled.to_csv(\"Dataset/dataset_resampled.csv\", index=False)\n",
     "\n",
-    "# Annotazioni sui valori\n",
     "for p in ax.patches:\n",
     "    ax.annotate(f'{int(p.get_height())}', (p.get_x() + p.get_width() / 2, p.get_height()), \n",
     "                ha='center', va='bottom')\n",
@@ -195,7 +192,6 @@
     "\n",
     "#df_train_resampled.to_csv(\"Dataset/dataset_resampled.csv\", index=False)\n",
     "\n",
-    "# Annotazioni sui valori\n",
     "for p in ax.patches:\n",
     "    ax.annotate(f'{int(p.get_height())}', (p.get_x() + p.get_width() / 2, p.get_height()), \n",
     "                ha='center', va='bottom')\n",
@@ -381,8 +377,8 @@
    "source": [
     "for model_name, model in models_def_params.items():\n",
     "    print(model_name, model)\n",
-    "    model.fit(x_train_scaled, y_train)  # Addestrare il modello\n",
-    "    y_pred = model.predict(x_test_scaled)  # Predizione sui dati di test\n",
+    "    model.fit(x_train_scaled, y_train)\n",
+    "    y_pred = model.predict(x_test_scaled)\n",
     "    print(f\"\\n{model_name} - Test Set Evaluation\")\n",
     "    print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "    print(classification_report(y_test, y_pred))"
@@ -401,7 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definisci la griglia di parametri per Random Forest\n",
+    "# Definizione griglia di parametri per Random Forest\n",
     "param_grid = {\n",
     "    'n_estimators': [100, 200, 300],\n",
     "    'max_depth': [None, 10, 20, 30],\n",
@@ -414,35 +410,7 @@
     "grid_search = GridSearchCV(estimator=rf, param_grid=param_grid, cv=5, scoring='accuracy', n_jobs=-1)\n",
     "grid_search.fit(x_train_scaled, y_train)\n",
     "\n",
-    "\n",
     "# Miglior modello trovato\n",
-    "print(\"Best parameters found: \", grid_search.best_params_)\n",
-    "print(\"Best cross-validation accuracy: \", grid_search.best_score_)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Definire la griglia di parametri per AdaBoost\n",
-    "param_grid = {\n",
-    "    'n_estimators': [50, 100, 200],  # Numero di stadi (alberi)\n",
-    "    'learning_rate': [0.01, 0.1, 1.0],  # Tasso di apprendimento\n",
-    "    'estimator': [DecisionTreeClassifier(max_depth=1), DecisionTreeClassifier(max_depth=3)]  # Alberi base\n",
-    "}\n",
-    "\n",
-    "# Creare un'istanza di AdaBoost\n",
-    "ada_boost = AdaBoostClassifier()\n",
-    "\n",
-    "# Configurare GridSearchCV\n",
-    "grid_search = GridSearchCV(estimator=ada_boost, param_grid=param_grid, cv=5, scoring='accuracy', n_jobs=-1)\n",
-    "\n",
-    "# Eseguire la Grid Search\n",
-    "grid_search.fit(x_train_scaled, y_train)\n",
-    "\n",
-    "# Visualizzare i migliori parametri e il miglior score\n",
     "print(\"Best parameters found: \", grid_search.best_params_)\n",
     "print(\"Best cross-validation accuracy: \", grid_search.best_score_)"
    ]
@@ -453,24 +421,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definire la griglia di parametri per KNN\n",
+    "# Definizione griglia di parametri per AdaBoost\n",
     "param_grid = {\n",
-    "    'n_neighbors': [3, 5, 7, 9, 11],  # Numero di vicini\n",
-    "    'weights': ['uniform', 'distance'],  # Criterio di pesatura\n",
-    "    'metric': ['minkowski', 'euclidean', 'manhattan'],  # Metriche di distanza\n",
-    "    'p': [1, 2],  # Parametro di distanza per Minkowski (1=Manhattan, 2=Euclidean)\n",
+    "    'n_estimators': [50, 100, 200],\n",
+    "    'learning_rate': [0.01, 0.1, 1.0],\n",
+    "    'estimator': [DecisionTreeClassifier(max_depth=1), DecisionTreeClassifier(max_depth=3)]\n",
     "}\n",
     "\n",
-    "# Creare un'istanza del modello KNN\n",
-    "knn = KNeighborsClassifier()\n",
+    "ada_boost = AdaBoostClassifier()\n",
     "\n",
-    "# Configurare GridSearchCV\n",
-    "grid_search = GridSearchCV(estimator=knn, param_grid=param_grid, cv=5, scoring='accuracy', n_jobs=-1)\n",
+    "# Configurazione GridSearchCV\n",
+    "grid_search = GridSearchCV(estimator=ada_boost, param_grid=param_grid, cv=5, scoring='accuracy', n_jobs=-1)\n",
     "\n",
-    "# Eseguire la Grid Search\n",
+    "# Esecuzione Grid Search\n",
     "grid_search.fit(x_train_scaled, y_train)\n",
     "\n",
-    "# Visualizzare i migliori parametri e il miglior score\n",
+    "# Visualizzazione dei migliori parametri e il miglior score\n",
+    "print(\"Best parameters found: \", grid_search.best_params_)\n",
+    "print(\"Best cross-validation accuracy: \", grid_search.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definizione griglia di parametri per KNN\n",
+    "param_grid = {\n",
+    "    'n_neighbors': [3, 5, 7, 9, 11],\n",
+    "    'weights': ['uniform', 'distance'],\n",
+    "    'metric': ['minkowski', 'euclidean', 'manhattan'],\n",
+    "    'p': [1, 2],\n",
+    "}\n",
+    "\n",
+    "# Creazione di un'istanza del modello KNN\n",
+    "knn = KNeighborsClassifier()\n",
+    "\n",
+    "# Configurazione GridSearchCV\n",
+    "grid_search = GridSearchCV(estimator=knn, param_grid=param_grid, cv=5, scoring='accuracy', n_jobs=-1)\n",
+    "\n",
+    "# Esecuzione\n",
+    "grid_search.fit(x_train_scaled, y_train)\n",
+    "\n",
+    "# Risultati migliori\n",
     "print(\"Best parameters found: \", grid_search.best_params_)\n",
     "print(\"Best cross-validation accuracy: \", grid_search.best_score_)\n"
    ]
@@ -481,21 +475,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definire la griglia di parametri per GaussianNB\n",
+    "# Definizione griglia di parametri per GaussianNB\n",
     "param_grid = {\n",
     "    'var_smoothing': [1e-9, 1e-8, 1e-7, 1e-6, 1e-5],  # Variabile di smoothing per evitare problemi numerici\n",
     "}\n",
     "\n",
-    "# Creare un'istanza del modello GaussianNB\n",
+    "# Creazione di un'istanza del modello GaussianNB\n",
     "gnb = GaussianNB()\n",
     "\n",
-    "# Configurare GridSearchCV\n",
+    "# Configurazione GridSearchCV\n",
     "grid_search = GridSearchCV(estimator=gnb, param_grid=param_grid, cv=5, scoring='accuracy', n_jobs=-1)\n",
     "\n",
-    "# Eseguire la Grid Search\n",
+    "# Esecuzione Grid Search\n",
     "grid_search.fit(x_train_scaled, y_train)\n",
     "\n",
-    "# Visualizzare i migliori parametri e il miglior score\n",
+    "# Parametri migliori\n",
     "print(\"Best parameters found: \", grid_search.best_params_)\n",
     "print(\"Best cross-validation accuracy: \", grid_search.best_score_)"
    ]
@@ -648,8 +642,8 @@
    "source": [
     "for model_name, model in models_pers_params.items():\n",
     "    print(model_name, model)\n",
-    "    model.fit(x_train_scaled, y_train)  # Addestrare il modello\n",
-    "    y_pred = model.predict(x_test_scaled)  # Predizione sui dati di test\n",
+    "    model.fit(x_train_scaled, y_train)\n",
+    "    y_pred = model.predict(x_test_scaled)\n",
     "    print(f\"\\n{model_name} - Test Set Evaluation\")\n",
     "    print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "    print(classification_report(y_test, y_pred))"
@@ -899,7 +893,7 @@
     "from sklearn.ensemble import AdaBoostClassifier\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
     "\n",
-    "# Definire il Voting Classifier con soft voting\n",
+    "# Definizione del Voting Classifier con soft voting\n",
     "voting_clf = VotingClassifier(\n",
     "    estimators=[\n",
     "        ('rf', RandomForestClassifier(max_depth= 30, n_estimators=200)),\n",
@@ -910,23 +904,22 @@
     "        ('gbc', GradientBoostingClassifier(random_state=42))\n",
     "\n",
     "    ],\n",
-    "    voting='soft',  # Usando soft voting\n",
-    "    n_jobs=-1  # Usa tutti i core disponibili\n",
+    "    voting='soft',\n",
+    "    n_jobs=-1\n",
     ")\n",
     "\n",
-    "# Addestrare il Voting Classifier\n",
+    "# Addestramento con il Voting Classifier\n",
     "voting_clf.fit(x_train_scaled, y_train)\n",
     "\n",
-    "# Predire e calcolare l'accuratezza\n",
+    "# Predizione e calcolo dell'accuratezza\n",
     "y_pred = voting_clf.predict(x_test)\n",
     "\n",
-    "# Calcolare e visualizzare il classification report\n",
     "print(classification_report(y_test, y_pred))\n",
     "\n",
-    "# **Confusion Matrix**\n",
+    "# Confusion Matrix\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "\n",
-    "# Visualizzare la matrice di confusione come una heatmap\n",
+    "# Plotting\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=voting_clf.classes_, yticklabels=voting_clf.classes_)\n",
     "plt.xlabel('Predicted')\n",
@@ -934,12 +927,12 @@
     "plt.title('Confusion Matrix')\n",
     "plt.show()\n",
     "\n",
-    "# **Curva Precision-Recall per Multiclass**\n",
+    "# Curva Precision-Recall per Multiclass\n",
     "y_test_bin = label_binarize(y_test, classes=voting_clf.classes_)\n",
     "\n",
     "plt.figure(figsize=(8, 6))\n",
     "for i in range(y_test_bin.shape[1]):\n",
-    "    y_scores = voting_clf.predict_proba(x_test)[:, i]  # Probabilità per ogni classe\n",
+    "    y_scores = voting_clf.predict_proba(x_test)[:, i]\n",
     "    precision, recall, _ = precision_recall_curve(y_test_bin[:, i], y_scores)\n",
     "    plt.plot(recall, precision, label=f'Class {voting_clf.classes_[i]}')\n",
     "\n",
@@ -950,7 +943,7 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "# **Curva ROC per Multiclass**\n",
+    "# Curva ROC per Multiclass\n",
     "plt.figure(figsize=(8, 6))\n",
     "for i in range(y_test_bin.shape[1]):\n",
     "    fpr, tpr, _ = roc_curve(y_test_bin[:, i], voting_clf.predict_proba(x_test)[:, i])\n",
@@ -965,16 +958,15 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "# **Learning Curve**\n",
+    "# Learning Curve\n",
     "train_sizes, train_scores, test_scores = learning_curve(voting_clf, x_train_scaled, y_train, cv=5)\n",
     "\n",
-    "# Calcolare la media e la deviazione standard dei punteggi\n",
     "train_mean = train_scores.mean(axis=1)\n",
     "test_mean = test_scores.mean(axis=1)\n",
     "train_std = train_scores.std(axis=1)\n",
     "test_std = test_scores.std(axis=1)\n",
     "\n",
-    "# Tracciare la learning curve\n",
+    "# Plotting Learning Curve\n",
     "plt.figure(figsize=(8, 6))\n",
     "plt.plot(train_sizes, train_mean, label='Training Accuracy', color='blue')\n",
     "plt.plot(train_sizes, test_mean, label='Test Accuracy', color='green')\n",
@@ -987,31 +979,30 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "# **Feature Importance (Random Forest)**\n",
+    "# Feature Importance (Random Forest)\n",
     "importances = voting_clf.named_estimators_['rf'].feature_importances_\n",
     "\n",
-    "# Creare un dataframe per le feature importances\n",
+    "# Creazione dataframe per le feature importances\n",
     "features = x_train_scaled.columns\n",
     "importance_df = pd.DataFrame({\n",
     "    'Feature': features,\n",
     "    'Importance': importances\n",
     "})\n",
     "\n",
-    "# Ordinare per importanza\n",
     "importance_df = importance_df.sort_values(by='Importance', ascending=False)\n",
     "\n",
-    "# Tracciare un bar plot per le feature più importanti\n",
+    "# Bar plot\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.barh(importance_df['Feature'], importance_df['Importance'], color='skyblue')\n",
     "plt.xlabel('Importance')\n",
     "plt.title('Feature Importance (Random Forest)')\n",
-    "plt.gca().invert_yaxis()  # Invertire l'asse y per mostrare le feature più importanti in alto\n",
+    "plt.gca().invert_yaxis()\n",
     "plt.show()\n",
     "\n",
-    "# **Matrice di Confusione Normalizzata**\n",
+    "# Matrice di Confusione Normalizzata\n",
     "cm_normalized = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
     "\n",
-    "# Visualizzare la matrice di confusione normalizzata\n",
+    "# Plotting matrice di confusione normalizzata\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(cm_normalized, annot=True, fmt='.2f', cmap='Blues', xticklabels=voting_clf.classes_, yticklabels=voting_clf.classes_)\n",
     "plt.xlabel('Predicted')\n",
@@ -1083,7 +1074,7 @@
     "from sklearn.ensemble import StackingClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "# Definire i modelli di base\n",
+    "# Definizione modelli di base\n",
     "base_learners = [\n",
     "    ('rf', RandomForestClassifier(n_estimators=300, random_state=42)),\n",
     "    ('knn', KNeighborsClassifier(metric='minkowski', n_neighbors=3, p=1, weights='distance')),\n",
@@ -1096,23 +1087,23 @@
     "# Meta-modello\n",
     "meta_model = LogisticRegression()\n",
     "\n",
-    "# Creare il modello di stacking\n",
+    "# Creazione modello di stacking\n",
     "stacking_clf = StackingClassifier(\n",
     "    estimators=base_learners,\n",
     "    final_estimator=meta_model,\n",
     "    n_jobs=-1\n",
     ")\n",
     "\n",
-    "# Addestrare il modello di stacking\n",
+    "# Training\n",
     "stacking_clf.fit(x_train_scaled, y_train)\n",
     "\n",
-    "# Predire e calcolare l'accuratezza\n",
+    "# Predizione e calcolo dell'accuratezza\n",
     "y_pred = stacking_clf.predict(x_test)\n",
     "print(classification_report(y_test, y_pred))\n",
     "\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "\n",
-    "# Visualizzare la matrice di confusione come una heatmap\n",
+    "# Visualizzazione grafico\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=stacking_clf.classes_, yticklabels=stacking_clf.classes_)\n",
     "plt.xlabel('Predicted')\n",
