Corretto dataset ETL sampling

--- a/dataset_ETL_sampling.ipynb
+++ b/dataset_ETL_sampling.ipynb
@@ -169,10 +169,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "#loading dataset\n",
     "df = pd.read_csv('Dataset/Student_performance_data _.csv')\n",
     "\n",
-    "# Verifica dei primi 5 record\n",
     "df.head()"
    ]
   },
@@ -366,7 +364,6 @@
     }
    ],
    "source": [
-    "#eliminiamo la colonna StudentId che non è utile\n",
     "df = df.drop(\"StudentID\", axis=1)\n",
     "df = df.drop(\"GPA\", axis=1) #tolto perchè nella classificazione usiamo Grade Class che sono i valori interi di GPA\n",
     "df.head()"
@@ -448,14 +445,10 @@
     "\n",
     "X = df1.drop('GradeClass', axis=1)\n",
     "\n",
-    "# Esegui la funzione sulla classe di interesse (ad esempio, GradeClass 4)\n",
-    "X_class = X[y == 4]  # Sostituisci con la classe desiderata\n",
+    "X_class = X[y == 4] \n",
     "\n",
-    "# Ad esempio, visualizza la matrice delle distanze solo per i primi 100 campioni\n",
     "plot_distance_heatmap(X_class, n_samples=2000)\n",
-    "\n",
-    "# Oppure, se vuoi visualizzare tutti i campioni, puoi omettere il parametro n_samples\n",
-    "# plot_distance_heatmap(X_class)\n"
+    "\n"
    ]
   },
   {
@@ -486,14 +479,11 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import pairwise_distances\n",
     "\n",
-    "# Supponiamo che la colonna 'GradeClass' sia la variabile target\n",
     "y = df['GradeClass']\n",
     "df1 = df.copy()\n",
     "X = df1.drop('GradeClass', axis=1)\n",
     "\n",
-    "# Funzione per calcolare e visualizzare la distribuzione delle somiglianze\n",
     "def plot_similarity_distribution(X, bins=20):\n",
-    "    # Calcola la matrice delle distanze\n",
     "    distances = pairwise_distances(X)\n",
     "    \n",
     "    # Estraggo solo la parte superiore triangolare della matrice (senza la diagonale)\n",
@@ -503,7 +493,6 @@
     "    max_distance = np.max(upper_triangular_distances)\n",
     "    normalized_distances = (upper_triangular_distances / max_distance) * 100\n",
     "    \n",
-    "    # Crea un istogramma delle distanze\n",
     "    plt.hist(normalized_distances, bins=bins, edgecolor='black')\n",
     "    plt.title('Distribuzione delle coppie di campioni per percentuale di distanza')\n",
     "    plt.xlabel('Percentuale distanza coppie di campioni')\n",
@@ -511,10 +500,9 @@
     "    plt.show()\n",
     "\n",
     "# Applica la funzione al dataset della classe di interesse (ad esempio, GradeClass 4)\n",
-    "X_class = X[y == 4]  # Sostituisci con la classe desiderata\n",
+    "X_class = X[y == 4] \n",
     "plot_similarity_distribution(X_class)\n",
-    "\n",
-    "# La percentuale rappresenta la \"distanza euclidea L2\" per ogni coppia di campione"
+    "\n"
    ]
   },
   {
@@ -551,17 +539,14 @@
     "    # Conta il numero di coppie con distanza <= alla soglia\n",
     "    similar_pairs_count = np.sum(upper_triangular_distances <= threshold)\n",
     "    \n",
-    "    # Stampa il risultato\n",
     "    print(f\"Numero di coppie di campioni con distanza <= {threshold_percentage}% della distanza massima: {similar_pairs_count}\")\n",
     "\n",
     "\n",
-    "# Supponiamo che la colonna 'GradeClass' sia la variabile target\n",
     "y = df['GradeClass']\n",
     "df1 = df.copy()\n",
     "X = df1.drop('GradeClass', axis=1)\n",
     "\n",
-    "# Esegui la funzione sulla classe di interesse (ad esempio, GradeClass 4)\n",
-    "X_class = X[y == 4]  # Sostituisci con la classe desiderata\n",
+    "X_class = X[y == 4] \n",
     "count_similar_pairs(X_class, threshold_percentage=5)\n"
    ]
   },
@@ -728,7 +713,6 @@
     "df_train_resampled.to_csv(\"Dataset/training_balanced.csv\", index=False)\n",
     "df_test.to_csv(\"Dataset/testing.csv\", index=False)\n",
     "\n",
-    "# Visualizza le prime righe dei DataFrame per confermare\n",
     "print(\"Training set bilanciato:\")\n",
     "print(df_train_resampled.head())\n",
     "print(\"\\nTesting set:\")\n",
@@ -763,7 +747,6 @@
     }
    ],
    "source": [
-    "# Distribuzione di GradeClass con annotazioni\n",
     "plt.figure(figsize=(8, 6))\n",
     "ax = sns.countplot(data=df_train_resampled, x='GradeClass', palette=\"Oranges\")\n",
     "\n",
@@ -801,17 +784,14 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import pairwise_distances\n",
     "\n",
-    "# Supponiamo che la colonna 'GradeClass' sia la variabile target\n",
     "y = df_train_resampled['GradeClass']\n",
     "df1 = df_train_resampled.copy()\n",
     "X = df1.drop('GradeClass', axis=1)\n",
     "\n",
     "\n",
-    "# Applica la funzione al dataset della classe di interesse (ad esempio, GradeClass 4)\n",
-    "X_class = X[y == 4]  # Sostituisci con la classe desiderata\n",
+    "X_class = X[y == 4]  \n",
     "plot_similarity_distribution(X_class)\n",
-    "\n",
-    "# La percentuale rappresenta la \"distanza euclidea L2\" per ogni coppia di campione"
+    "\n"
    ]
   },
   {
@@ -838,7 +818,6 @@
     }
    ],
    "source": [
-    "#numerical_cols = [ 'StudyTimeWeekly', 'Absences', 'Tutoring', 'ParentalSupport','GradeClass']\n",
     "numerical_cols = ['Age', 'StudyTimeWeekly', 'Absences', 'Ethnicity','ParentalEducation', 'Tutoring', 'ParentalSupport',\t'Extracurricular',\t'Sports','Music','Volunteering','GradeClass']\n",
     "corr_matrix = df[numerical_cols].corr()\n",
     "\n",
