--- a/dataset_ETL.ipynb
+++ b/dataset_ETL.ipynb
@@ -172,7 +172,6 @@
     "#loading dataset\n",
     "df = pd.read_csv('Dataset/Student_performance_data _.csv')\n",
     "\n",
-    "# Verifica dei primi 5 record\n",
     "df.head()"
    ]
   },
@@ -373,7 +372,6 @@
     }
    ],
    "source": [
-    "#eliminiamo la colonna StudentId che non è utile\n",
     "df = df.drop(\"StudentID\", axis=1)\n",
     "df = df.drop(\"GPA\", axis=1) #tolto perchè nella classificazione usiamo Grade Class che sono i valori interi di GPA\n",
     "df.head()"
@@ -542,7 +540,6 @@
     }
    ],
    "source": [
-    "#numero di righe - studenti del dataset\n",
     "print(len(df))\n",
     "\n",
     "age = df['Age'].unique()\n",
@@ -581,15 +578,12 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Crea un grafico a barre con Seaborn\n",
     "sns.countplot(x='Age', data=df, palette='Reds')\n",
     "\n",
-    "# Aggiungi etichette e titolo\n",
     "plt.xlabel('Età')\n",
     "plt.ylabel('Numero di studenti')\n",
     "plt.title('Distribuzione delle Età')\n",
     "\n",
-    "# Mostra il grafico\n",
     "plt.show()"
    ]
   },
@@ -623,13 +617,10 @@
     "fig, ax = plt.subplots()\n",
     "ax.pie(age_counts, autopct='%1.1f%%', startangle=90, colors=colors)\n",
     "\n",
-    "# Aggiungi la leggenda separata\n",
     "ax.legend(custom_labels, title=\"Leggenda\", loc=\"upper left\", bbox_to_anchor=(1, 1))\n",
     "\n",
-    "# Aggiungi il titolo\n",
     "plt.title('Distribuzione delle etnie')\n",
     "\n",
-    "# Mostra il grafico\n",
     "plt.show()\n"
    ]
   },
@@ -721,15 +712,12 @@
     }
    ],
    "source": [
-    "# Distribuzione di GradeClass\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.countplot(data=df, x='GradeClass', palette=\"Oranges\")\n",
     "plt.title('Distribuzione di GradeClass')\n",
     "plt.xlabel('GradeClass')\n",
     "plt.ylabel('Conteggio')\n",
-    "plt.show()\n",
-    "\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
@@ -749,7 +737,6 @@
     }
    ],
    "source": [
-    "#numerical_cols = [ 'StudyTimeWeekly', 'Absences', 'Tutoring', 'ParentalSupport','GradeClass']\n",
     "numerical_cols = ['Age', 'StudyTimeWeekly', 'Absences', 'Ethnicity','ParentalEducation', 'Tutoring', 'ParentalSupport',\t'Extracurricular',\t'Sports','Music','Volunteering','GradeClass']\n",
     "corr_matrix = df[numerical_cols].corr()\n",
     "\n",
@@ -797,12 +784,10 @@
     "plt.figure(figsize=(8, 6))\n",
     "sns.boxplot(x='Participates_in_any', y='GradeClass', data=df, palette='Set2')\n",
     "\n",
-    "# Aggiungiamo il titolo e le etichette\n",
     "plt.title('Distribuzione dei voti in base alla partecipazione alle attività pomeridiane')\n",
     "plt.xlabel('Partecipazione ad attività pomeridiane (No = 0, Sì=1)')\n",
     "plt.ylabel('Voto')\n",
     "\n",
-    "# Mostriamo il grafico\n",
     "plt.show()\n"
    ]
   }
@@ -823,7 +808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
